--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -124,7 +124,7 @@
     "#On utilise le jeu de date précédent pour créer un signal de température multipériodique \n",
     "\n",
     "# signal multipériodique\n",
-    "T_riv.create_multiperiodic_signal([T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates, dt,\n",
+    "T_riv.create_multiperiodic_signal([T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates,\n",
     "                                   offset=T_riv_offset)\n",
     "\n",
     "'''\n",
@@ -133,7 +133,7 @@
     "                                   offset=T_riv_offset, verbose = True)\n",
     "'''\n",
     "\n",
-    "T_riv.plot() #On affiche le signal de température créé"
+    "T_riv.plot_temp_river() #On affiche le signal de température créé"
    ]
   },
   {
