--- a/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
+++ b/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
@@ -157,7 +157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "molovenv",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
