Adding Pearson mosaic for generated data for several values of k. Not tested yet
Changing create_matrix to profil_temperature

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -125,15 +125,7 @@
     "\n",
     "# signal multipériodique\n",
     "T_riv.create_multiperiodic_signal([T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates,\n",
-    "                                   offset=T_riv_offset)\n",
-    "\n",
-    "'''\n",
-    "# simple signal\n",
-    "T_riv.create_multiperiodic_signal([T_riv_day_amp], [[P_T_riv_day, 's']], emu_observ_test_user1._dates,\n",
-    "                                   offset=T_riv_offset, verbose = True)\n",
-    "'''\n",
-    "\n",
-    "T_riv.plot_temp_river() #On affiche le signal de température créé"
+    "                                   offset=T_riv_offset)"
    ]
   },
   {
