Deleting calc_pearson_coef
Adding scrap to the notebooks

Few details

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -475,6 +475,89 @@
     "list_k, list_T = list_k_T(range_of_minus_log_10_K)\n",
     "plot_mosaic_pearson(depth_cells[0:last_cell], list_T, list_k)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pearson_coef_test(offset_H, moinslog10IntrinK): \n",
+    "    \"\"\"Conditions limites\"\"\"\n",
+    "    # Température de la rivière\n",
+    "    zeroT = ZERO_CELSIUS  #time_series works only with forcings in celsius. See if it is deeper in pyheatmy or not\n",
+    "\n",
+    "    T_riv_amp = 5\n",
+    "    T_riv_offset = 20  + zeroT\n",
+    "    nday = 3\n",
+    "    P_T_riv = nday*NHOURINDAY*4*dt #monthly   period\n",
+    "    # Température de l'aquifère\n",
+    "    T_aq_amp = 0\n",
+    "    T_aq_offset = 14 + zeroT\n",
+    "    P_T_aq = -9999 # à mettre dans le init\n",
+    "    # Pression différentielle\n",
+    "    dH_amp = 0\n",
+    "    P_dh = -9999 #14*24*4*dt\n",
+    "\n",
+    "\n",
+    "    depth_sensors = [.1, .2, .3, .4]\n",
+    "    Zbottom = 0.4\n",
+    "\n",
+    "    \"\"\"Bruit de mesure\"\"\"\n",
+    "    sigma_meas_P = 0.001  #initial value 0.001\n",
+    "    sigma_meas_T = 0.1  # initial value 0.1\n",
+    "    time_series_dict_user1 = {\n",
+    "    \"offset\":.0,\n",
+    "    \"depth_sensors\":depth_sensors,\n",
+    "\t\"param_time_dates\": [t_debut, t_fin, dt], \n",
+    "    \"param_dH_signal\": [dH_amp, P_dh, offset_H], #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
+    "\t\"param_T_riv_signal\": [T_riv_amp, P_T_riv, T_riv_offset],\n",
+    "    \"param_T_aq_signal\": [T_aq_amp, P_T_aq, T_aq_offset],\n",
+    "    \"sigma_meas_P\": sigma_meas_P,\n",
+    "    \"sigma_meas_T\": sigma_meas_T, \n",
+    "}\n",
+    "    emu_observ_test_user1 = synthetic_MOLONARI.from_dict(time_series_dict_user1)\n",
+    "    \n",
+    "    T_riv.create_multiperiodic_signal([T_AMP_ANNUELLE, T_AMP_JOURNALIERE], [[P_an, 'm'], [P_jour, 'h']], emu_observ_test_user1._dates, dt,\n",
+    "                                   offset=T_MOY_ANNUELLE)\n",
+    "    emu_observ_test_user1._T_riv = T_riv.multi_periodic[1][:]\n",
+    "\n",
+    "    emu_observ_test_user1._generate_Shaft_Temp_series()\n",
+    "    emu_observ_test_user1._generate_perturb_Shaft_Temp_series()\n",
+    "    emu_observ_test_user1._generate_perturb_T_riv_dH_series()\n",
+    "    name =\"Couche en sable\"\n",
+    "    zLow = Zbottom\n",
+    "    n = 0.1\n",
+    "    lambda_s = 2 # test cas purement advectif\n",
+    "    rhos_cs = 4e6\n",
+    "\n",
+    "    # modèle une couche\n",
+    "    layers_list= layersListCreator([(name, zLow, moinslog10IntrinK, n, lambda_s, rhos_cs)])\n",
+    "\n",
+    "    print(f\"Layers list: {layers_list}\")\n",
+    "\n",
+    "    # on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
+    "    col_dict = {\n",
+    "        \"river_bed\": 1., \n",
+    "        \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
+    "        \"offset\": .0,\n",
+    "        \"dH_measures\": emu_observ_test_user1._molonariP_data,\n",
+    "        \"T_measures\": emu_observ_test_user1._molonariT_data,\n",
+    "        \"sigma_meas_P\": 0.001, #float\n",
+    "        \"sigma_meas_T\": 0.1, #float\n",
+    "    }\n",
+    "    col = Column.from_dict(col_dict,verbose=False)\n",
+    "    nb_cells=20 # nombre de cellules, une tous les 5 centimètres \n",
+    "\n",
+    "    col._compute_solve_transi_multiple_layers(layers_list, nb_cells, verbose=True)\n",
+    "    depth_cells = np.array([depth_sensors[-1]/nb_cells*i for i in range(nb_cells)])\n",
+    "    pears_coef=get_pearson_coef(depth_cells, np.transpose(col._temperatures), emu_observ_test_user1._dates, dt)\n",
+    "    plot_pearson_coef(pears_coef, emu_observ_test_user1._dates, dt)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    pearson_coef_test(0.05, 12)"
+   ]
   }
  ],
  "metadata": {
