Trying to get real data pearson plotting functionnal, but no data appears

--- a/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
+++ b/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
@@ -98,17 +98,13 @@
    "outputs": [],
    "source": [
     "#path \n",
+    "file_path = 'd:\\\\MinesParis\\\\2A\\\\MOLONARI\\\\PROJET\\\\MOLONARI1D\\\\dataAnalysis\\\\data_traite\\\\point52_temperature_traité.csv'\n",
     "\n",
-    "path = 'C:/Users/alexa/2A/MOLONARI1D/dataAnalysis/data_traite'\n",
-    "\n",
-    "#Point considéré\n",
-    "\n",
-    "point_temperature = 'point52_temperature_traité.csv'\n",
     "\n",
     "#Définition d'un dictionnaire pour les données \n",
     "\n",
     "dico = {}\n",
-    "dico['chemin temperature'] = os.path.join(path, point_temperature)\n",
+    "dico['chemin temperature'] = file_path\n",
     "\n",
     "\n",
     "temperature = read_csv(dico['chemin temperature'])\n",
@@ -131,6 +127,13 @@
     "#Création des colonnes de date et de données pour initialiser l'objet time_series_multiperiodic\n",
     "\n",
     "dates = dico['temperature']['dates'].to_numpy()\n",
+    "\n",
+    "# Define the date format\n",
+    "date_format = \"%Y-%m-%dT%H:%M:%S.%f\"\n",
+    "\n",
+    "# Convert each date string to a datetime object\n",
+    "# dates = [datetime.strptime(date, date_format) for date in dates]\n",
+    "\n",
     "data_temperature = dico['temperature'][['T_10', 'T_20', 'T_30', 'T_40']].to_numpy()\n",
     "\n",
     "print(dates[:5], data_temperature[:5])\n"
@@ -149,7 +152,7 @@
     "\n",
     "ts = time_series_multiperiodic('ts')\n",
     "\n",
-    "ts.values_time_series(dates, data_temperature, dt, depth_sensors=depth_sensor)\n",
+    "ts.values_time_series(dates, data_temperature, depth_sensors=depth_sensor)\n",
     "ts.plot_temp_river()\n",
     "ts.plot_pearson_coef()\n",
     "\n",
