--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -35,7 +35,7 @@
     "NBCHAINS = 20\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITER = 1500\n",
+    "NBITER = 50\n",
     "NBITERMCMC = 50"
    ]
   },
@@ -305,30 +305,23 @@
     "    \"n\": ((.01, .25), .01),\n",
     "    \"lambda_s\": ((1, 10), .1),\n",
     "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"q\": ((1, 10), .1),\n",
+    "    \"q\": ((0.01, 0.1), .001),\n",
     "}\n",
     "\n",
     "all_priors = [\n",
     "    ['Couche 1', Zbottom, priors],\n",
     "]\n",
     "col.compute_mcmc(\n",
-    "    nb_iter = 500,\n",
+    "    nb_iter = NBITER,\n",
     "    all_priors = all_priors,\n",
-    "    sigma2=1.0,\n",
     "    verbose=True\n",
     ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
     "col.compute_solve_transi(bestLayers, verbose=False)\n",
-    "    all_priors = all_priors,\n",
-    "    nb_cells = NBCELL,\n",
-    "    verbose=False,\n",
-    "    nb_iter=NBITER,\n",
-    "    nb_chain=1,\n",
-    ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
-    "col.compute_solve_transi(bestLayers, nb_cells=NBCELL,verbose=False)\n",
+    "col.compute_solve_transi(bestLayers, verbose=False)\n",
     "col.plot_all_param_pdf()\n",
     "print(f\"acceptance : {col._acceptance[-1]}\")\n",
     "col.plot_all_results()"
@@ -469,15 +462,9 @@
    "outputs": [],
    "source": [
     "col.compute_mcmc(\n",
-    "    nb_iter = 700,\n",
+    "    nb_iter = NBITER,\n",
     "    all_priors = all_priors,\n",
-    "    sigma2=1.0,\n",
-    "    verbose=False\n",
-    "\tall_priors=all_priors,\n",
-    "\tnb_cells=NBCELL,\n",
-    "\tverbose=False,\n",
-    "\tnb_iter=NBITER,\n",
-    "\tnb_chain=1\n",
+    "    verbose=False,\n",
     ")"
    ]
   },
@@ -546,26 +533,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "col.compute_mcmc(\n",
-    "    nb_iter = 700,\n",
+    "    nb_iter = NBITER,\n",
     "    all_priors = all_priors,\n",
-    "    sigma2_temp_prior = sigma_prior,\n",
     "    verbose=False\n",
     ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
     "col.compute_solve_transi(bestLayers,verbose=False)\n",
-    "    all_priors = all_priors,\n",
-    "    nb_cells = NBCELL,\n",
-    "    nb_iter=NBITERMCMC,\n",
-    "    nb_chain=NBCHAINS,\n",
-    "    verbose=False,\n",
-    "    typealgo=\"with sigma\"\n",
-    ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
-    "col.compute_solve_transi(bestLayers, nb_cells=NBCELL,verbose=False)\n",
+    "col.compute_solve_transi(bestLayers,verbose=False)\n",
     "col.plot_all_param_pdf()\n",
     "col.plot_all_results()\n",
     "col.plot_darcy_flow_quantile()\n",
@@ -606,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
