Ajout de commentaire pour clarifier le code

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -222,7 +222,7 @@
     "n = .1\n",
     "lambda_s = 2\n",
     "rhos_cs = 4e6\n",
-    "q = 0\n",
+    "q = 0.5\n",
     "params = Param(moinslog10IntrinK,n,lambda_s,rhos_cs, q)\n",
     "# assert params == params_tuple\n"
    ]
@@ -305,14 +305,14 @@
     "    \"n\": ((.01, .25), .01),\n",
     "    \"lambda_s\": ((1, 10), .1),\n",
     "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"q\": ((0.01, 0.1), .001),\n",
+    "    \"q\": ((0, 0.00001), .00000001),\n",
     "}\n",
     "\n",
     "all_priors = [\n",
     "    ['Couche 1', Zbottom, priors],\n",
     "]\n",
     "col.compute_mcmc(\n",
-    "    nb_iter = NBITER,\n",
+    "    nb_iter = 5*NBITER,\n",
     "    all_priors = all_priors,\n",
     "    verbose=True\n",
     ")\n",
