trying to understand why the signal remains monoperiodic even after forcing

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "# signal multipériodique\n",
     "T_riv.create_multiperiodic_signal([T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates,\n",
-    "                                   offset=T_riv_offset)\n",
+    "                                   offset=T_riv_offset, verbose = False)\n",
     "\n",
     "\n",
     "T_riv.time_series_dict_user1 = time_series_dict_user1\n",
@@ -112,7 +112,6 @@
     "#on génère un objet colonne à partir de l'objet emu_observ_test_user1\n",
     "# modèle une couche\n",
     "layers_list= layersListCreator([(name, Zbottom, moinslog10IntrinK, n, lambda_s, rhos_cs)])\n",
-    "print(f\"Layers list: {layers_list}\")\n",
     "\n",
     "T_riv.layers_list = layers_list\n",
     "\n",
@@ -129,39 +128,7 @@
     "T_riv.col_dict = col_dict\n",
     "T_riv.nb_cells = nb_cells\n",
     "\n",
-    "T_riv.profil_temperature()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "'''\n",
-    "    # Extract the data which is useful to create a T_riv signal\n",
-    "    def extract_data_from_time_series_dict(self):\n",
-    "        {\n",
-    "    \"offset\":.0,\n",
-    "    \"depth_sensors\":depth_sensors,\n",
-    "\t\"param_time_dates\": [t_debut, t_fin, dt], \n",
-    "    \"param_dH_signal\": [dH_amp, P_dh, dH_offset], #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
-    "\t\"param_T_riv_signal\": [T_riv_day_amp, P_T_riv_day, T_riv_offset],\n",
-    "    \"param_T_aq_signal\": [T_aq_amp, P_T_aq, T_aq_offset],\n",
-    "    \"sigma_meas_P\": sigma_meas_P,\n",
-    "    \"sigma_meas_T\": sigma_meas_T, #float\n",
-    "    \"verbose\": False\n",
-    "        } =\n",
-    "        d = self.time_series_dict_user1\n",
-    "        T_riv_year_amp = d[]\n",
-    "        T_riv_day_amp =\n",
-    "        P_T_riv_year =\n",
-    "        P_T_riv_day =\n",
-    "        T_riv_offset =\n",
-    "        return [T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates, T_riv_offset\n",
-    "'''"
+    "T_riv.profil_temperature(verbose = True)\n"
    ]
   },
   {
@@ -172,9 +139,10 @@
    "source": [
     "#On vérifie que les températures ont bien été modifiées dans l'objet column (en particulier que la température à profondeur nulle est bien celle de la rivière)\n",
     "\n",
+    "plt.plot(emu_observ_test_user1._dates, T_riv.matrix[0,:])\n",
     "plt.plot(emu_observ_test_user1._dates, col._temperatures[0,:])\n",
     "plt.show()\n",
-    "\n",
+    "print(f\"La matrice de température a pour shape : {T_riv.matrix.shape}, abscisse = température aux 20 cellules, ordonnée = température à chaque pas de temps\")\n",
     "print(f\"La matrice de température a pour shape : {col._temperatures.shape}, abscisse = température aux 20 cellules, ordonnée = température à chaque pas de temps\")"
    ]
   },
