integration de PR130 in research/generate_synthetic_cases/demo_genData.ipynb

--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,12 +136,13 @@
     "n = 0.1\n",
     "lambda_s = 2 # test cas purement advectif\n",
     "rhos_cs = 4e6\n",
+    "q = 0\n",
     "\n",
     "# modèle une couche\n",
-    "layers_list= layersListCreator([(name, zLow, moinslog10IntrinK, n, lambda_s, rhos_cs)])\n",
+    "layers_list= layersListCreator([(name, zLow, moinslog10IntrinK, n, lambda_s, rhos_cs, q)])\n",
     "\n",
     "print(f\"Layers list: {layers_list}\")\n",
-    "\n",
+    "nbcells = 85\n",
     "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
     "col_dict = {\n",
     "\t\"river_bed\": 1., \n",
@@ -149,6 +150,7 @@
     "\t\"offset\": .0,\n",
     "    \"dH_measures\": emu_observ_test_user1._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user1._T_Shaft_measures,\n",
+    "    \"nb_cells\" : nbcells,\n",
     "    \"sigma_meas_P\": 0.01, #float\n",
     "    \"sigma_meas_T\": 0.1, #float\n",
     "}\n",
@@ -161,7 +163,7 @@
    "source": [
     "## 3 Generating temperature in the river bed\n",
     "\n",
-    "We use the [_measures_column_one_layer(col, layers_list, nb_cells)] method, which updates the measurements for T1, T2 and T3 at each point in time with the direct model pyheatmy. The sensor time series are then perturbated with a gaussian noise in the Time series object. We display the temperature simulated at sensors."
+    "We use the [_measures_column_one_layer(col, layers_list)] method, which updates the measurements for T1, T2 and T3 at each point in time with the direct model pyheatmy. The sensor time series are then perturbated with a gaussian noise in the Time series object. We display the temperature simulated at sensors."
    ]
   },
   {
@@ -170,10 +172,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# on résout le modèle direct avec les observations simulées\n",
-    "nb_cells = 100\n",
+    "\n",
     "# print(emu_observ_test_user1._T_Shaft)\n",
-    "emu_observ_test_user1._measures_column_one_layer(col, layers_list, nb_cells)\n",
+    "emu_observ_test_user1._measures_column_one_layer(col, layers_list)\n",
     "#emu_observ_test_user1._plot_molonariT_data()\n",
     "col.plot_temperature_at_sensors(verbose=False)\n",
     "\n"
@@ -235,11 +236,12 @@
     "\t\"offset\": .0,\n",
     "    \"dH_measures\": emu_observ_test_user1._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user1._molonariT_data,\n",
+    "    \"nb_cells\" : nbcells,\n",
     "    \"sigma_meas_P\": None, #float\n",
     "    \"sigma_meas_T\": None, #float\n",
     "}\n",
     "newCol = Column.from_dict(newCol_dict)\n",
-    "newCol.compute_solve_transi(layers_list, nb_cells,verbose=True)\n",
+    "newCol.compute_solve_transi(layers_list,verbose=True)\n",
     "\n",
     "nt = len(col._temperatures[0,:])\n",
     "dplot=15\n",
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +331,7 @@
     "n = [.4,.1]\n",
     "lambda_s = [2,2] \n",
     "rhos_cs = [4e6,4e6]\n",
+    "q = [0,0]\n",
     "\n",
     "# on utilise les mesures générées précédemment\n",
     "col_dict4 = {\n",
@@ -337,6 +340,7 @@
     "\t\"offset\": .0,\n",
     "    \"dH_measures\": emu_observ_test_user4._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user4._T_Shaft_measures,\n",
+    "    \"nb_cells\" : nbcells,\n",
     "    \"sigma_meas_P\": emu_observ_test_user4._sigma_P, #float\n",
     "    \"sigma_meas_T\": emu_observ_test_user4._sigma_T, #float\n",
     "}\n",
@@ -344,7 +348,7 @@
     "col4 = Column.from_dict(col_dict4)\n",
     "\n",
     "# modèle une couche\n",
-    "layers_list4= layersListCreator([(name[i], zLow[i], moinslog10IntrinK[i], n[i], lambda_s[i], rhos_cs[i]) for i in range(len(name))])"
+    "layers_list4= layersListCreator([(name[i], zLow[i], moinslog10IntrinK[i], n[i], lambda_s[i], rhos_cs[i], q[i]) for i in range(len(name))])"
    ]
   },
   {
@@ -353,8 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_cells = 100\n",
-    "emu_observ_test_user4._measures_column_one_layer(col4, layers_list4, nb_cells)\n",
+    "emu_observ_test_user4._measures_column_one_layer(col4, layers_list4)\n",
     "col4.plot_temperature_at_sensors(verbose=False)\n",
     "# col4.plot_compare_temperatures_sensors()\n",
     "nt = len(col4._temperatures[0,:])\n",
@@ -413,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -427,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
