not working no perturbation or monoperiodic signal

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -81,10 +81,16 @@
    "source": [
     "# Instanciation de time_series_multi_periodic\n",
     "T_riv = time_series_multiperiodic(\"multi_periodic\")\n",
+    "T_riv.nb_cells = nb_cells\n",
     "\n",
     "# On regarde des variations de température sur une année, on définit une période journalière, et une période annuelle\n",
     "\n",
     "\"\"\"Reprise du code de dmo_genData pour créer un objet synthetic_MOLONARI\"\"\"\n",
+    "\n",
+    "# modèle une couche\n",
+    "layers_list= layersListCreator([(name, Zbottom, moinslog10IntrinK, n, lambda_s, rhos_cs)])\n",
+    "T_riv.layers_list = layers_list\n",
+    "\n",
     "# un dictionnaire qui facilite le paramétrage avec des variables globales définies plus haut\n",
     "time_series_dict_user1 = {\n",
     "    \"offset\":.0,\n",
@@ -98,22 +104,34 @@
     "    \"verbose\": False\n",
     "}\n",
     "\n",
-    "#On utilise le jeu de date précédent pour créer un signal de température multipériodique \n",
+    "T_riv.time_series_dict_user1 = time_series_dict_user1\n",
+    "\n",
+    "\n",
+    "\n",
+    "#on génère un objet colonne à partir de l'objet emu_observ_test_user1\n",
+    "\n",
     "emu_observ_test_user1 = synthetic_MOLONARI.from_dict(time_series_dict_user1)\n",
     "\n",
     "\n",
-    "# signal multipériodique\n",
+    "\n",
+    "#On utilise le jeu de date précédent pour créer un signal de température multipériodique \n",
     "T_riv.create_multiperiodic_signal([T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates,\n",
     "                                   offset=T_riv_offset, verbose = False)\n",
     "\n",
+    "#On force la variable T_riv dans l'objet emu_observ_test_user1\n",
+    "emu_observ_test_user1._T_riv = T_riv.multi_periodic[1]\n",
+    "plt.plot(emu_observ_test_user1._dates, emu_observ_test_user1._T_riv)\n",
     "\n",
-    "T_riv.time_series_dict_user1 = time_series_dict_user1\n",
+    "plt.show()\n",
     "\n",
-    "#on génère un objet colonne à partir de l'objet emu_observ_test_user1\n",
-    "# modèle une couche\n",
-    "layers_list= layersListCreator([(name, Zbottom, moinslog10IntrinK, n, lambda_s, rhos_cs)])\n",
+    "#Puis on applique les méthodes _generate_Shaft_Temp_series et _generate_perturb_Shaft_Temp_series pour changer les valeurs dépendante du nouveau T_riv\n",
+    "emu_observ_test_user1._generate_Shaft_Temp_series(verbose = False)\n",
+    "emu_observ_test_user1._generate_perturb_Shaft_Temp_series()\n",
+    "emu_observ_test_user1._generate_perturb_T_riv_dH_series()\n",
     "\n",
-    "T_riv.layers_list = layers_list\n",
+    "plt.plot(emu_observ_test_user1._dates, emu_observ_test_user1._T_riv)\n",
+    "\n",
+    "plt.show()\n",
     "\n",
     "col_dict = {\n",
     "\t\"river_bed\": river_bed, \n",
@@ -126,10 +144,22 @@
     "}\n",
     "\n",
     "T_riv.col_dict = col_dict\n",
-    "T_riv.nb_cells = nb_cells\n",
     "\n",
-    "T_riv.profil_temperature(verbose = True)\n"
+    "\n",
+    "column = Column.from_dict(T_riv.col_dict,verbose=False)\n",
+    "column._compute_solve_transi_multiple_layers(T_riv.layers_list, T_riv.nb_cells, verbose=False)\n",
+    "\n",
+    "T_riv.matrix = column._temperatures\n",
+    "\n",
+    "T_riv.plot_temp()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -140,10 +170,8 @@
     "#On vérifie que les températures ont bien été modifiées dans l'objet column (en particulier que la température à profondeur nulle est bien celle de la rivière)\n",
     "\n",
     "plt.plot(emu_observ_test_user1._dates, T_riv.matrix[0,:])\n",
-    "plt.plot(emu_observ_test_user1._dates, col._temperatures[0,:])\n",
     "plt.show()\n",
-    "print(f\"La matrice de température a pour shape : {T_riv.matrix.shape}, abscisse = température aux 20 cellules, ordonnée = température à chaque pas de temps\")\n",
-    "print(f\"La matrice de température a pour shape : {col._temperatures.shape}, abscisse = température aux 20 cellules, ordonnée = température à chaque pas de temps\")"
+    "print(f\"La matrice de température a pour shape : {T_riv.matrix.shape}, abscisse = température aux 20 cellules, ordonnée = température à chaque pas de temps\")"
    ]
   },
   {
