generating temperature profile is working
Solving the problem with the attribute setting of moins log k in layers_list

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -169,7 +169,7 @@
    "source": [
     "#On vérifie que les températures ont bien été modifiées dans l'objet column (en particulier que la température à profondeur nulle est bien celle de la rivière)\n",
     "\n",
-    "plt.plot(emu_observ_test_user1._dates, T_riv.matrix[0,:])\n",
+    "plt.plot(emu_observ_test_user1._dates, np.transpose(column._temperatures))\n",
     "plt.show()\n",
     "print(f\"La matrice de température a pour shape : {T_riv.matrix.shape}, abscisse = température aux 20 cellules, ordonnée = température à chaque pas de temps\")"
    ]
