The program is running, and the pearson coeficient is calculted using all cells but the last ones, but the results still don't correspond to previous results or to what they should be like.

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -32,146 +32,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Conditions limites\"\"\"\n",
-    "# Température de la rivière\n",
-    "T_riv_year_amp = 6 # °C, représente l'amplitude de variation de température annuelle\n",
-    "T_riv_offset = 12 + ZERO_CELSIUS # °C, représente l'offset commun de nos signaux de température\n",
-    "T_riv_day_amp = 1 # °C, représente l'amplitude de variation de température journalière\n",
-    "# Température de l'aquifère\n",
-    "T_aq_amp = 0\n",
-    "T_aq_offset = 12 + ZERO_CELSIUS\n",
-    "P_T_aq = -9999 # à mettre dans le init\n",
-    "\n",
-    "P_T_riv_year = NDAYINYEAR * NSECINDAY # Période annuelle en mois\n",
-    "P_T_riv_day = NSECINDAY # Période journalière, en heures\n",
-    "t_debut = (2024, 4, 15, 8, 0, 0)  # (year, month, day, hour, minute, second)\n",
-    "t_fin = (2024, 4, 20, 8, 0, 0)\n",
-    "dt = int(NSECINHOUR / 4)  #On se place dans le cas d'un point de mesure toutes les quinze minutes (à moduler en fonction de l'intervale temporel considéré)\n",
-    "\n",
-    "moinslog10IntrinK = 11\n",
-    "lambda_s = 2 # test cas purement advectif\n",
-    "rhos_cs = 4e6\n",
-    "range_of_minus_log_10_K = [10,11,12,13,14,15]  # The values we want to test\n",
-    "\n",
-    "n = 0.1  # porosité\n",
-    "nb_cells=100 # nombre de cellules, une tous les 5 centimètres \n",
-    "depth_sensors = [.1, .2, .3, .4]\n",
-    "Zbottom = 1\n",
-    "river_bed = 1.  # profondeur de la colonne en mètres\n",
-    "last_cell = int(9/10 * nb_cells)  # on écarte les dernières valeurs pour éviter les effets de bord\n",
-    "depth_cells = np.linspace(0, river_bed, nb_cells)\n",
-    "\n",
-    "# Pression différentielle\n",
-    "dH_amp = 0\n",
-    "dH_offset = - 0.1  # m\n",
-    "P_dh = -9999 #14*24*4*dt\n",
-    "\n",
-    "# Bruit de mesure\n",
-    "sigma_meas_P = 0.001\n",
-    "sigma_meas_T = 0.1\n",
-    "\n",
-    "name =\"Couche en sable\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Instanciation de time_series_multi_periodic\n",
     "T_riv = time_series_multiperiodic(\"multi_periodic\")\n",
-    "T_riv.nb_cells = nb_cells\n",
     "\n",
-    "# On regarde des variations de température sur une année, on définit une période journalière, et une période annuelle\n",
+    "# Renseignement de toutes les valeurs\n",
     "\n",
-    "\"\"\"Reprise du code de dmo_genData pour créer un objet synthetic_MOLONARI\"\"\"\n",
+    "\"\"\"Conditions limites\"\"\"\n",
+    "# Température de la rivière\n",
+    "T_riv.T_riv_year_amp = 6 # °C, représente l'amplitude de variation de température annuelle\n",
+    "T_riv.T_riv_offset = 12 + ZERO_CELSIUS # °C, représente l'offset commun de nos signaux de température\n",
+    "T_riv.T_riv_day_amp = 1 # °C, représente l'amplitude de variation de température journalière\n",
+    "# Température de l'aquifère\n",
+    "T_riv.T_aq_amp = 0\n",
+    "T_riv.T_aq_offset = 12 + ZERO_CELSIUS\n",
+    "T_riv.P_T_aq = -9999 # à mettre dans le init\n",
     "\n",
-    "# modèle une couche\n",
-    "layers_list= layersListCreator([(name, Zbottom, moinslog10IntrinK, n, lambda_s, rhos_cs)])\n",
-    "T_riv.layers_list = layers_list\n",
+    "T_riv.P_T_riv_year = NDAYINYEAR * NSECINDAY # Période annuelle en mois\n",
+    "T_riv.P_T_riv_day = NSECINDAY # Période journalière, en heures\n",
+    "T_riv.t_debut = (2024, 4, 15, 8, 0, 0)  # (year, month, day, hour, minute, second)\n",
+    "T_riv.t_fin = (2024, 4, 20, 8, 0, 0)\n",
+    "T_riv.dt = int(NSECINHOUR / 4)  #On se place dans le cas d'un point de mesure toutes les quinze minutes (à moduler en fonction de l'intervale temporel considéré)\n",
     "\n",
-    "# un dictionnaire qui facilite le paramétrage avec des variables globales définies plus haut\n",
-    "time_series_dict_user1 = {\n",
-    "    \"offset\":.0,\n",
-    "    \"depth_sensors\":depth_sensors,\n",
-    "\t\"param_time_dates\": [t_debut, t_fin, dt], \n",
-    "    \"param_dH_signal\": [dH_amp, P_dh, dH_offset], #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
-    "\t\"param_T_riv_signal\": [T_riv_day_amp, P_T_riv_day, T_riv_offset],\n",
-    "    \"param_T_aq_signal\": [T_aq_amp, P_T_aq, T_aq_offset],\n",
-    "    \"sigma_meas_P\": sigma_meas_P,\n",
-    "    \"sigma_meas_T\": sigma_meas_T, #float\n",
-    "    \"verbose\": False\n",
-    "}\n",
+    "T_riv.moinslog10IntrinK = 11\n",
+    "T_riv.lambda_s = 2 # test cas purement advectif\n",
+    "T_riv.rhos_cs = 4e6\n",
+    "T_riv.range_of_minus_log_10_K = [10,11,12,13,14,15]  # The values we want to test\n",
     "\n",
-    "T_riv.time_series_dict_user1 = time_series_dict_user1\n",
+    "T_riv.n = 0.1  # porosité\n",
+    "T_riv.nb_cells=100 # nombre de cellules, une tous les 5 centimètres \n",
+    "T_riv.depth_sensors = [.1, .2, .3, .4]\n",
+    "T_riv.Zbottom = 1\n",
+    "T_riv.river_bed = 1.  # profondeur de la colonne en mètres\n",
+    "T_riv.last_cell = int(9/10 * T_riv.nb_cells)  # on écarte les dernières valeurs pour éviter les effets de bord\n",
+    "T_riv.depth_cells = np.linspace(0, T_riv.river_bed, T_riv.nb_cells)\n",
     "\n",
+    "# Pression différentielle\n",
+    "T_riv.dH_amp = 0\n",
+    "T_riv.dH_offset = - 0.1  # m\n",
+    "T_riv.P_dh = -9999 #14*24*4*dt\n",
     "\n",
+    "# Bruit de mesure\n",
+    "T_riv.sigma_meas_P = 0.001\n",
+    "T_riv.sigma_meas_T = 0.1\n",
     "\n",
-    "#on génère un objet colonne à partir de l'objet emu_observ_test_user1\n",
-    "\n",
-    "emu_observ_test_user1 = synthetic_MOLONARI.from_dict(time_series_dict_user1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#On utilise le jeu de date précédent pour créer un signal de température multipériodique \n",
-    "T_riv.create_multiperiodic_signal([T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates,\n",
-    "                                   offset=T_riv_offset, verbose = False)\n",
-    "\n",
-    "#On force la variable T_riv dans l'objet emu_observ_test_user1\n",
-    "emu_observ_test_user1._T_riv = T_riv.multi_periodic[1]\n",
-    "plt.plot(emu_observ_test_user1._dates, emu_observ_test_user1._T_riv)\n",
-    "\n",
-    "plt.show()\n",
-    "\n",
-    "#Puis on applique les méthodes _generate_Shaft_Temp_series et _generate_perturb_Shaft_Temp_series pour changer les valeurs dépendante du nouveau T_riv\n",
-    "emu_observ_test_user1._generate_Shaft_Temp_series(verbose = False)\n",
-    "emu_observ_test_user1._generate_perturb_Shaft_Temp_series()\n",
-    "emu_observ_test_user1._generate_perturb_T_riv_dH_series()\n",
-    "\n",
-    "plt.plot(emu_observ_test_user1._dates, emu_observ_test_user1._T_riv)\n",
-    "\n",
-    "plt.show()\n",
-    "\n",
-    "col_dict = {\n",
-    "\t\"river_bed\": river_bed, \n",
-    "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
-    "\t\"offset\": .0,\n",
-    "    \"dH_measures\": emu_observ_test_user1._molonariP_data,\n",
-    "    \"T_measures\": emu_observ_test_user1._molonariT_data,\n",
-    "    \"sigma_meas_P\": sigma_meas_P,\n",
-    "    \"sigma_meas_T\": sigma_meas_T,\n",
-    "}\n",
-    "\n",
-    "T_riv.col_dict = col_dict\n",
-    "\n",
-    "\n",
-    "column = Column.from_dict(T_riv.col_dict,verbose=False)\n",
-    "column._compute_solve_transi_multiple_layers(T_riv.layers_list, T_riv.nb_cells, verbose=False)\n",
-    "\n",
-    "T_riv.matrix = column._temperatures\n",
-    "\n",
-    "T_riv.plot_temp()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#On vérifie que les températures ont bien été modifiées dans l'objet column (en particulier que la température à profondeur nulle est bien celle de la rivière)\n",
-    "\n",
-    "plt.plot(emu_observ_test_user1._dates, np.transpose(column._temperatures))\n",
-    "plt.show()\n",
-    "print(f\"La matrice de température a pour shape : {T_riv.matrix.shape}, abscisse = température aux 20 cellules, ordonnée = température à chaque pas de temps\")"
+    "T_riv.name =\"Couche en sable\""
    ]
   },
   {
@@ -180,7 +84,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T_riv.plot_mosaic_pearson(range_of_minus_log_10_K)"
+    "# Creating the attribute matrix (profile of temperature along the column)\n",
+    "T_riv.create_profil_temperature()\n",
+    "\n",
+    "T_riv.plot_temp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can also enter any signal :\n",
+    "\n",
+    "T_riv.entry_signal = 0 # To be implemented"
    ]
   }
  ],
