--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -53,15 +53,14 @@
     "T_riv.t_fin = (2024, 4, 20, 8, 0, 0)\n",
     "T_riv.dt = int(NSECINHOUR / 4)  #On se place dans le cas d'un point de mesure toutes les quinze minutes (à moduler en fonction de l'intervale temporel considéré)\n",
     "\n",
-    "T_riv.moinslog10IntrinK = 11\n",
+    "T_riv.moinslog10IntrinK = 9\n",
     "T_riv.lambda_s = 2 # test cas purement advectif\n",
     "T_riv.rhos_cs = 4e6\n",
-    "T_riv.range_of_minus_log_10_K = [10,11,12,13,14,15]  # The values we want to test\n",
+    "T_riv.range_of_minus_log_10_K = [9,10,11,12,13,14]  # The values we want to test\n",
     "\n",
     "T_riv.n = 0.1  # porosité\n",
     "T_riv.nb_cells=100 # nombre de cellules, une tous les 5 centimètres \n",
     "T_riv.depth_sensors = [.1, .2, .3, .4]\n",
-    "T_riv.Zbottom = 1\n",
     "T_riv.river_bed = 1.  # profondeur de la colonne en mètres\n",
     "T_riv.last_cell = int(9/10 * T_riv.nb_cells)  # on écarte les dernières valeurs pour éviter les effets de bord\n",
     "T_riv.depth_cells = np.linspace(0, T_riv.river_bed, T_riv.nb_cells)\n",
@@ -96,6 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "T_riv.plot_linear_regression(0)\n",
+    "\n",
     "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K)"
    ]
   },
@@ -107,7 +108,9 @@
    "source": [
     "# We can also enter any signal :\n",
     "\n",
-    "T_riv.entry_signal = 0 # To be implemented"
+    "T_riv.entry_signal = 0 # To be implemented\n",
+    "\n",
+    "# faire un troisème type ou bien forcer le multi périodique ?"
    ]
   }
  ],
