The changes had perturbated templ_real_data.
Corrected. It is running correctly but some information is redundant in the demo.

--- a/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
+++ b/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
@@ -31,10 +31,21 @@
    "outputs": [],
    "source": [
     "#Création de l'objet time_series_multiperiodic\n",
-    "\n",
-    "dt = 15*NSECINMIN\n",
-    "depth_sensor = DEFAULT_sensor_depth\n",
     "ts = time_series_multiperiodic(\"ts\")\n",
+    "\n",
+    "# Renseignement de toutes les valeurs utilmes\n",
+    "\n",
+    "\n",
+    "ts.dt = int(NSECINHOUR / 4)  #On se place dans le cas d'un point de mesure toutes les quinze minutes (à moduler en fonction de l'intervale temporel considéré)\n",
+    "ts.river_bed = 0.4  # profondeur de la colonne en mètres\n",
+    "\n",
+    "ts.nb_cells=4 # nombre de cellules, une tous les 5 centimètres \n",
+    "ts.depth_sensors = DEFAULT_sensor_depth\n",
+    "ts.last_cell = 4  # real data so all cells should be considered\n",
+    "\n",
+    "ts.depth_cells = np.array(ts.depth_sensors)\n",
+    "\n",
+    "depth_sensor = DEFAULT_sensor_depth\n",
     "\n",
     "df = ts.read_csv(52)\n",
     "print(df.head())\n",
