Starting to select only 4 points for Pearson calculating.
But create_profil_temperature not workin now

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "T_riv.n = 0.1  # porosité\n",
     "T_riv.nb_cells=100 # nombre de cellules, une tous les 5 centimètres \n",
-    "T_riv.depth_sensors = [.1, .2, .3, .4]\n",
+    "T_riv.depth_sensors = np.array([.1, .2, .3, .4])\n",
     "T_riv.river_bed = 1.  # profondeur de la colonne en mètres\n",
     "T_riv.last_cell = int(9/10 * T_riv.nb_cells)  # on écarte les dernières valeurs pour éviter les effets de bord\n",
     "T_riv.depth_cells = np.linspace(0, T_riv.river_bed, T_riv.nb_cells)\n",
@@ -95,10 +95,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T_riv.plot_linear_regression(0)\n",
+    "T_riv.plot_linear_regression(day = 0)\n",
     "\n",
     "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pour simuler correctement les conditions expérimentales, il faut ne garder que 4 points pour calculer Pearson (les points aux depth_sensors)\n",
+    "\n",
+    "T_riv.plot_linear_regression(day = 0, sensors_only = True)\n",
+    "# T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, sensors_only = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
