--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -53,7 +53,7 @@
     "T_riv.t_fin = (2024, 4, 20, 8, 0, 0)\n",
     "T_riv.dt = int(NSECINHOUR / 4)  #On se place dans le cas d'un point de mesure toutes les quinze minutes (à moduler en fonction de l'intervale temporel considéré)\n",
     "\n",
-    "T_riv.moinslog10IntrinK = 9\n",
+    "T_riv.moinslog10IntrinK = 11\n",
     "T_riv.lambda_s = 2 # test cas purement advectif\n",
     "T_riv.rhos_cs = 4e6\n",
     "T_riv.range_of_minus_log_10_K = [9,10,11,12,13,14]  # The values we want to test\n",
@@ -64,6 +64,8 @@
     "T_riv.river_bed = 1.  # profondeur de la colonne en mètres\n",
     "T_riv.last_cell = int(9/10 * T_riv.nb_cells)  # on écarte les dernières valeurs pour éviter les effets de bord\n",
     "T_riv.depth_cells = np.linspace(0, T_riv.river_bed, T_riv.nb_cells)\n",
+    "# the indices of depth_cells corresponding to the depths of depth_sensors\n",
+    "T_riv.depth_sensors_index_list = [int(T_riv.depth_sensors[j] / ( T_riv.river_bed / (T_riv.nb_cells - 1))) for j in range(len(T_riv.depth_sensors))]\n",
     "\n",
     "# Pression différentielle\n",
     "T_riv.dH_amp = 0\n",
@@ -95,7 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T_riv.plot_linear_regression(day = 0)\n",
+    "T_riv.plot_linear_regression(day = 0, sensors_only=False)\n",
+    "T_riv.plot_linear_regression(day = 0, sensors_only=False)\n",
+    "\n",
     "\n",
     "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K)"
    ]
@@ -108,7 +112,9 @@
    "source": [
     "# Pour simuler correctement les conditions expérimentales, il faut ne garder que 4 points pour calculer Pearson (les points aux depth_sensors)\n",
     "\n",
+    "print('aakablk', T_riv.moinslog10IntrinK)\n",
     "T_riv.plot_linear_regression(day = 0, sensors_only = True)\n",
+    "T_riv.plot_linear_regression(day = 0, sensors_only = False)\n",
     "# T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, sensors_only = True)"
    ]
   },
