mosaic pearson for 4 sensors

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "# Pour simuler correctement les conditions expérimentales, il faut ne garder que 4 points pour calculer Pearson (les points aux depth_sensors)\n",
     "T_riv.plot_linear_regression(day = 0, sensors_only = True)\n",
-    "# T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, sensors_only = True)"
+    "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, sensors_only = True)"
    ]
   },
   {
