list object is not callable error
Trying to force a linear entry signal

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -122,10 +122,14 @@
    "outputs": [],
    "source": [
     "# We can also enter any signal :\n",
+    "# The form of the signal should be [dates, T], 2 arrays\n",
+    "# We use therefore the methode entry_signal with linear type\n",
+    "# To make it easy, we set this entry_signal to the attribute multi_periodic \n",
+    "T_riv.entry_signal_type = 'linear'\n",
     "\n",
-    "T_riv.entry_signal = 0 # To be implemented\n",
-    "\n",
-    "# faire un troisème type ou bien forcer le multi périodique ?"
+    "# Now, we plot the linear regression for day 0 and the pearson coefficient mosaic\n",
+    "T_riv.plot_linear_regression(day = 0, create_signal = False)\n",
+    "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, create_signal = False)"
    ]
   }
  ],
