Linear entry_signal done

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -53,7 +53,7 @@
     "T_riv.t_fin = (2024, 4, 20, 8, 0, 0)\n",
     "T_riv.dt = int(NSECINHOUR / 4)  #On se place dans le cas d'un point de mesure toutes les quinze minutes (à moduler en fonction de l'intervale temporel considéré)\n",
     "\n",
-    "T_riv.moinslog10IntrinK = 11\n",
+    "T_riv.moinslog10IntrinK = 12\n",
     "T_riv.lambda_s = 2 # test cas purement advectif\n",
     "T_riv.rhos_cs = 4e6\n",
     "T_riv.range_of_minus_log_10_K = [9,10,11,12,13,14]  # The values we want to test\n",
@@ -129,7 +129,9 @@
     "\n",
     "# Now, we plot the linear regression for day 0 and the pearson coefficient mosaic\n",
     "T_riv.plot_linear_regression(day = 0, create_signal = False)\n",
-    "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, create_signal = False)"
+    "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, create_signal = False)\n",
+    "T_riv.plot_temp(all_depths=False)\n",
+    "T_riv.plot_temp(all_depths=True)"
    ]
   }
  ],
